--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
@@ -100,7 +100,7 @@
                     <table id="SelectedPOTable" class="cell-border " style="width:100%">
                     </table>
                 </div>
-                <div class="col-auto" style="text-align:right"><p style="font-weight:bold;padding:10px 0">Total Available Qty<label id="totalAvailableQty">200</label></p></div>
+                <div class="col-auto" style="text-align:right"><p style="font-weight:bold;padding:10px 0">Total Available Qty <label id="totalAvailableQty" style="font-size:1.2em">200</label></p></div>
             </div>
             <div style="width:50%;height:40vh;float:left;">
                 <div class="col-auto"><h2 class="sub_title">AQL Plan</h2></div>
