--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/General.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/General.cshtml
@@ -77,7 +77,7 @@
             </tr>
         </table>
         <input type="hidden" id="goPage" name="goPage">
-        <button id="btnBack" onclick="this.form.submitted=this.value;" type="submit" value="Back" class="button" style="right:7em;padding: 0;"><p style=" font-size: 12px;">Back To Setting</p></button>
+        <button id="btnBack" onclick="this.form.submitted=this.value;" type="submit" value="Back" class="button" style="right:7em;padding: 0;"><p style=" font-size: 12px; padding: 14px 0">Back To Setting</p></button>
         <button id="btnNext" onclick="this.form.submitted=this.value;" type="submit" value="Next" style="right:0;" class="button">Next</button>
 
     </div>
