update layout others

--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Others.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Others.cshtml
@@ -110,7 +110,7 @@
                 <td class="ColumnStype" style="vertical-align:top;"><label class="Font">Remark</label></td>
                 <td colspan="2">
 
-                    @Html.TextAreaFor(o => o.OthersRemark, new { @style = "width:calc(100% - 80px); border: 1px solid black;" })
+                    @Html.TextAreaFor(o => o.OthersRemark, new { @style = "width:calc(100% - 80px);" })
 
                 </td>
                 <td></td>
