--- a/Quality/Quality/Views/PublicWondow/SizeList.cshtml
+++ b/Quality/Quality/Views/PublicWondow/SizeList.cshtml
@@ -45,6 +45,9 @@
         @Html.Hidden("OrderID", ViewData["OrderID"]);
         @Html.Hidden("StyleUkey", ViewData["StyleUkey"]);
         @Html.Hidden("Article", ViewData["Article"]);
+        @Html.Hidden("BrandID", ViewData["BrandID"]);
+        @Html.Hidden("SeasonID", ViewData["SeasonID"]);
+        @Html.Hidden("StyleID", ViewData["StyleID"]);
         <input type="submit" value="Query" />
         <input id="" type="button" value="Exit" />
     }
