--- a/Quality/Quality/Areas/SampleRFT/Views/Inspection/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/Inspection/Index.cshtml
@@ -1049,7 +1049,7 @@
                     </tr>
                     <tr>
                         <td><h3>Password</h3></td>
-                        <td><input id="ReworkListValidatePassword" type="text" /></td>
+                        <td><input id="ReworkListValidatePassword" type="password" /></td>
                     </tr>
                     <tr>
                         <td colspan="2">
