--- a/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Index.cshtml
@@ -681,6 +681,11 @@
         });
 
         $('.detailDelete').unbind('click').on('click', function () {
+            var t = $(this);
+            var tr = $(this).parents().parents();
+            var fcol = tr.children().find('a');
+            var id = fcol.attr("idx");
+            var no = fcol.attr("idv");
             msg.WithConfirm('Do you want to delete the data ?',
                 function ()
                 {
@@ -688,11 +693,13 @@
                         url: "@Url.Action("DeleteDetail", "GarmentTest", new { Area = "BulkFGT" })",
                         type: 'POST',
                         contentType: "application/json; charset=utf-8",
-                        data: JSON.stringify({ details: detail }),
+                        data: JSON.stringify({ ID: id, No: no }),
                         async: false,
                         success: function (data) {
                             if (data.SaveResult) {
-                                $(this).parents().parents().remove();
+                                console.log(tr);
+                                console.log(t);
+                                t.parents().parents('tr').remove();
                                 msg.WithSuccess("Delete Success");
                             }
                             else {
@@ -706,7 +713,7 @@
                 }, null);
         });
 
-        $('.SendMail').unbind('click').on('click'), function () {
+        $('.SendMail').unbind('click').on('click', function () {
             var tr = $(this).parents().parents();
             var fcol = tr.children().find('a');
             var id = fcol.attr("idx");
@@ -732,7 +739,7 @@
             });
         });
 
-        $('.ReceiveMail').unbind('click').on('click'), function () {
+        $('.ReceiveMail').unbind('click').on('click', function () {
             var tr = $(this).parents().parents();
             var fcol = tr.children().find('a');
             var id = fcol.attr("idx");
@@ -811,8 +818,17 @@
     }
 
     function AddDetailRow(OrderID, Article) {
-        var ID = parseInt($('.DetailTable > tbody > tr:last-child > td > a').attr('idx'));
-        var lastNO = parseInt($('.DetailTable > tbody > tr:last-child > td > a').attr('idv')) + 1;
+        var ID;
+        var lastNO;
+        if ($('.DetailTable > tbody > tr').length > 0) {
+            ID = parseInt($('.DetailTable > tbody > tr:last-child > td > a').attr('idx'));
+            lastNO = parseInt($('.DetailTable > tbody > tr:last-child > td > a').attr('idv')) + 1;
+        }
+        else {
+            ID = $('#garmentTest_ID').val();
+            lastNO = 1;
+        }
+
         $.ajax({
             url: "@Url.Action("AddDetailRow", "GarmentTest", new { Area = "BulkFGT" })",
             type: 'POST',
@@ -852,6 +868,88 @@
 
             var para = "?OrderID=&StyleUkey=0&BrandID=" + $('#Brand').val() + "&SeasonID=" + $('#Season').val() + "&StyleID=" + $('#Style').val();
             window.open('@Url.Action("ArticleList", "PublicWondow",new { Area=""})' + para, 'Article', config = 'toolbar=no,status=no,location=no,width=400,height=650');
+        });
+
+        $("#Brand").blur(function () {
+            $.ajax({
+                url: "@Url.Action("BrandList", "PublicWondow",new { Area=""})",
+                type: 'POST',
+                contentType: "application/json; charset=utf-8",
+                data: JSON.stringify({ BrandID: $(this).val(), ReturnType: "JSON" }),
+                async: true,
+                success: function (data) {
+                    if (data.length == 0) {
+                        $("#Brand").val('');
+                        msg.WithError('Brand Not Found');
+                    }
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    console.log(xhr.responseText);
+                }
+            });
+        });
+
+        $("#Season").blur(function () {
+            var BrandID = $('#Brand').val();
+            $.ajax({
+                url: "@Url.Action("SeasonList", "PublicWondow",new { Area=""})",
+                type: 'POST',
+                contentType: "application/json; charset=utf-8",
+                data: JSON.stringify({ BrandID: BrandID, SeasonID: $(this).val(), ReturnType: "JSON" }),
+                async: true,
+                success: function (data) {
+                    if (data.length == 0) {
+                        $("#Season").val('');
+                        msg.WithError('Season Not Found');
+                    }
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    console.log(xhr.responseText);
+                }
+            });
+        });
+
+        $("#Style").blur(function () {
+            var BrandID = $('#Brand').val();
+            var SeasonID = $('#Season').val();
+            $.ajax({
+                url: "@Url.Action("StyleList", "PublicWondow",new { Area=""})",
+                type: 'POST',
+                contentType: "application/json; charset=utf-8",
+                data: JSON.stringify({ BrandID: BrandID, SeasonID: SeasonID, StyleID: $(this).val(), ReturnType: "JSON" }),
+                async: true,
+                success: function (data) {
+                    if (data.length == 0) {
+                        $("#Style").val('');
+                        msg.WithError('Style Not Found');
+                    }
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    console.log(xhr.responseText);
+                }
+            });
+        });
+
+        $('#Article').blur(function () {
+            var BrandID = $('#Brand').val();
+            var SeasonID = $('#Season').val();
+            var StyleID = $('#Style').val();
+            $.ajax({
+                url: "@Url.Action("ArticleList", "PublicWondow",new { Area=""})",
+                type: 'POST',
+                contentType: "application/json; charset=utf-8",
+                data: JSON.stringify({ BrandID: BrandID, StyleUkey : 0, SeasonID: SeasonID, StyleID: StyleID, ArticleID: $(this).val(), ReturnType: "JSON" }),
+                async: true,
+                success: function (data) {
+                    if (data.length == 0) {
+                        $("#Article").val('');
+                        msg.WithError('Article Not Found');
+                    }
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    console.log(xhr.responseText);
+                }
+            });
         });
     }
 
